--- a/.travis.yml
+++ b/.travis.yml
@@ -18,17 +18,17 @@ script:
   - docker build -t udagram-api-feed ./udagram-api-feed
   - docker build -t udagram-api-user ./udagram-api-user
   - docker build -t udagram-frontend ./udagram-frontend
-  - docker build -t reverseproxy ./reverseproxy
+  - docker build -t reverseproxy ./udagram-reverseproxy
 
-  - docker tag udagram-api-feed anuonifade/udagram-api-feed:v2
-  - docker tag udagram-api-user anuonifade/udagram-api-user:v2
-  - docker tag udagram-frontend anuonifade/udagram-frontend:v2
-  - docker tag reverseproxy anuonifade/reverseproxy:v2
+  - docker tag udagram-api-feed anuonifade/udagram-api-feed:latest
+  - docker tag udagram-api-user anuonifade/udagram-api-user:latest
+  - docker tag udagram-frontend anuonifade/udagram-frontend:latest
+  - docker tag reverseproxy anuonifade/reverseproxy:latest
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push anuonifade/udagram-api-feed
-  - docker push anuonifade/udagram-api-user
-  - docker push anuonifade/udagram-frontend
-  - docker push anuonifade/reverseproxy
+  - docker push anuonifade/udagram-api-feed:latest
+  - docker push anuonifade/udagram-api-user:latest
+  - docker push anuonifade/udagram-frontend:latest
+  - docker push anuonifade/reverseproxy:latest
